<resources>
    <string name="app_name">智能餐厅</string>
    <string name="text_login">登录</string>
    <string name="text_other_login_method">请选择登录角色</string>
    <string name="label_register">新用户注册</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="user_name">用户名</string>
    <string name="user_pwd">密码</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_classify">分类</string>
    <string name="title_order">订单</string>
    <string name="title_mine">我的</string>
    <string name="title_count">统计</string>
    <string name="title_evaluate">评论</string>

    <string name="toolbar_title_home">智能餐厅</string>
    <string name="toolbar_title_classify">菜品分类</string>
    <string name="toolbar_title_order">我的订单</string>
    <string name="toolbar_title_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_seller_main">SellerMainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string-array name="month">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </string-array>
</resources>
