<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.david.smartdiningroom.mvp.view.activity.LoginActivity">


    <android.support.v7.widget.AppCompatImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="80dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:background="@drawable/rectangle_frame_drawable"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:src="@mipmap/user_name" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/gray_edit_bg"
            android:hint="@string/user_name"
            android:inputType="number"
            android:maxLength="11"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_frame_drawable"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@mipmap/user_pwd" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/gray_edit_bg"
            android:hint="@string/user_pwd"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textSize="14sp" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_forgetPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/forget_pwd"
        android:textSize="13sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/login_rectangle_btn_drawable"
        android:text="@string/text_login"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <View
            android:layout_width="50dp"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/text_other_login_method"
            android:textSize="12sp" />

        <View
            android:layout_width="50dp"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/qq_login"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/qq_icon" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/weChat_login"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/wechat_icon" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/label_register"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />
</LinearLayout>
